# ot-harjoitus

./: .coverage  .gitignore  README.md  gitlog.txt  pyproject.toml
dokumentaatio/: changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: device_repository.py  index.py
src/tests/: test_device_repository.py
wol-ctrl/: .coverage  pyproject.toml  tasks.py
wol-ctrl/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
wol-ctrl/src/: db_connection.py  device_repository.py  index.py  init_db.py  user_repository.py
wol-ctrl/src/classes/: objects.py
wol-ctrl/src/repositories/: device_repository.py  user_repository.py
wol-ctrl/src/services/: login_service.py  wol_service.py
wol-ctrl/src/tests/: test_device_repository.py  test_login_service.py  test_user_repository.py  test_wol_service.py
wol-ctrl/src/ui/: device_frame.py  device_view.py  login_view.py  ui.py  user_creation_view.py
