[tool.poetry]
name = "ot-harjoitus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.2.0"
pytest = "^8.1.1"
coverage = "^7.4.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
